--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.8",
     "jade": "*",
     "node-beglobal": "0.0.1-3",
-    "async": "~0.2.10"
+    "async": "~0.2.10",
+    "mongoose": "~3.8.8"
   }
 }
